# rground

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/game/: camera.rs  ids.rs  mod.rs
src/game/actors/: components.rs  mod.rs  spawn.rs  systems.rs
src/game/agents/: llm.rs  mod.rs  scheduler.rs  tools.rs
src/game/crafting/: mod.rs  recipes.rs  systems.rs
src/game/inventory/: mod.rs  model.rs  systems.rs
src/game/items/: mod.rs  registry.rs
src/game/player/: components.rs  mod.rs  systems.rs
src/game/ui/: hud.rs  mod.rs
src/game/world/: generation.rs  map.rs  mod.rs  systems.rs  tiles.rs
tests/: commit-step.sh
